--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 Numbers in square brackets ([]) are tracker items on SourceForge with patch
 or info related to the entry. <http://sourceforge.net/projects/vpopmail/>
 
+unreleased
+  - vusaged/domain.c: fixed -Wimplicit-function-declaration compilation warning
+
 5.6.1
   - vmysql.c: allow the insertion of a second valias row with the same alias/domain
     when vpopmail is configured with --enable-defaultdelivery and --enable-valias
