Fixing some i18n/encoding issues (tx thinrope)

--- a/ChangeLog
+++ b/ChangeLog
@@ -2076,7 +2076,7 @@ or info related to the entry. <http://sourceforge.net/projects/vpopmail/>
            the wrong order. 
 
 5.0pre6
-09/15/01   Jan Pavlík <gandie@rootshell.cz>
+09/15/01   Jan PavlÃ­k <gandie@rootshell.cz>
          - Hi, i think there is 5 or 6 real_connects but you set 
            MYSQL_PORT for 2 only...
 
@@ -3032,7 +3032,7 @@ Nov 30 - free memory in vcdb.c under error condition
 
 Nov 27 - vsqwebmail_pass was writing over TmpBuf1 in vadduser so
          that the chdir back to the callers directory was not working.
-                 Martin Köster <mk@ezl-data.dk>
+                 Martin KÃ¶ster <mk@ezl-data.dk>
 
 Nov 20 - add a res1=NULL in vmysql.c vauth_getall to make it more
          robust.  Garrett Marone <garrettm@web2010.com>
@@ -3346,7 +3346,7 @@ Jun 10 - Check for : character in gecos field and return error if found.
          : characters are in any of the fields, we have a problem
          parsing the lines.
 
-Jun 07 - Ondøej Surý - fixed possible memory problem with handling
+Jun 07 - OndÃ¸ej SurÃ½ - fixed possible memory problem with handling
          the HOST environment variable in vdelivermail.c 
 
 4.6
