--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 Numbers in square brackets ([]) are tracker items on SourceForge with patch
 or info related to the entry. <http://sourceforge.net/projects/vpopmail/>
 
+unreleased
+  - fixed a configure break where a trivial C test program exits on error with gcc-14.1 due to missing headers
+  - vusaged/domain.c: fixed -Wimplicit-function-declaration compilation warning
+  - vusaged/configure: autoconf 2.71 compat
+
 5.6.1
   - vmysql.c: allow the insertion of a second valias row with the same alias/domain
     when vpopmail is configured with --enable-defaultdelivery and --enable-valias
