--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,10 @@
 Numbers in square brackets ([]) are tracker items on SourceForge with patch
 or info related to the entry. <http://sourceforge.net/projects/vpopmail/>
 
-5.6.3
+5.6.3 - Released Oct 19, 2024
   - bug fixed: passwords with length > 8 were denied if sha-512 was disabled
 
-5.6.2
+5.6.2 - Released Oct 14, 2024
   - fixed a configure break where a trivial C test program exits on error with gcc-14.1 due to missing headers
   - vusaged/domain.c: fixed -Wimplicit-function-declaration compilation warning
   - vusaged/configure: autoconf 2.71 compat
