--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,10 @@
 Numbers in square brackets ([]) are tracker items on SourceForge with patch
 or info related to the entry. <http://sourceforge.net/projects/vpopmail/>
 
-5.6.4 - Released Feb 9, 2025
+5.6.6 - Released Feb 15, 2025
+  - bug fix: pwstr.h was not installed by Makefile (tx Bai Borko)
+
+5.6.5 - Released Feb 9, 2025
   - added pwd strength check also for vadduser.c
   - removed -std=c99 -D_XOPEN_SOURCE=500 arguments from CFLAGS in configure.ac to make clang happy
   - several changes to compile on FreeBSD clang v. 18.1.6
